2005-01-25  Murray Cumming  <murrayc@murrayc.com>

	* configure.in, Makefile.am: Add --disable-demos configure option, 
	by plors in bug #160756. This is needed because AIX does not support 
	sigc::bind at all and the demos would be quite unreadable if we 
	worked around that. This way, at least gtkmm can be installed on AIX.

2005-01-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/input/main.cc: Do not use O_NONBLOCK, because the 
	example is meant to be blocking. As advised by Chris Vine.

2005-01-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: Use nested sigc::bind<-1>s instead of 
	sigc::bind(), because the Tru64 compiler needs the extra hint.
	Added #ifdef GTKMM_HAVE_SIGC_BIND() around some templated convenience 
	methods, so we can disable these on AIX.
	* gtk/src/treemodel.[hg|ccg]: Use Gtk::TreeModel::iterator instead of just 
	iterator, because the Tru64 compiler finds it ambiguous.
	* demos/example_treeview_editable_cells.cc: Replace use of 
	TreeView::append_column_editable() with the long-winded workaround,
	so that the IRIX MipsPro and Tru64 compilers can build this

2005-01-18  Marco Scholten  <mscholtn@xs4all.nl>

	* examples/book/custom/custom_widget/examplewindow.cc:
	Removed #include <iostream> because it is not used.
	* examples/book/custom/custom_widget/mywidget.cc:
	Removed #include <iostream> because it is not used.
	In on_realize() removed:
	-set_flags(Gtk::REALIZED); 
	-set_window( get_parent_window() );
	-GtkWidget* cWidget = (GtkWidget*)gobj();
	-cWidget->style = gtk_style_attach(cWidget->style, get_window()->gobj());
	Added attributes.event_mask = get_events () | Gdk::EXPOSURE_MASK;
	to make the widget receive expose events.
	Create GdkWindow and set this as the widgets window
	Set colors in on_realize() instead of on_expose_event() because this
	needs to be done only once.
	Removed colormap in on_expose_event() because of problem with 