@@ -113,10 +113,15 @@ ColorSelection::set_change_palette_hook(const ColorSelection::SlotChangePaletteH
   {
     try
     {
+    
+//The AIX xlC compiler can not use sigc::bind at all, so this function will not work on that platform.
+//TODO: Use an actual configure test and/or test for the compiler, not just the platfom. 
+#if !defined(_AIX)
       if(old_func != &global_change_palette_hook_callback)
         old_slot = sigc::bind<-1>(sigc::ptr_fun(&old_change_palette_hook_callback), old_func);
       else if(global_change_palette_hook)
         old_slot = *global_change_palette_hook;
+#endif
     }
     catch(...)
     {
