@@ -1,5 +1,17 @@
 2005-01-25  Murray Cumming  <murrayc@murrayc.com>
 
+	* gtk/src/colorselection.hg: set_change_pallete_hook(): On AIX, #ifdef 
+	out the part that uses sigc::bind, which does not work with the AIX 
+	xlC compiler. This method will be broken of that platform, but it is 
+	rarely used anyway.
+	* demos/gtk-demo/demowindow.cc: SUN Forte, AIX, and Tru64 have the 
+	problem with flockfile and funlockfile - configure finds it but the 
+	compiler can not find it while compiling demowindow.cc. #undef 
+	HAVE_FLOCKFILE and HAVE_FUNLOCKFILE for now, so that it builds on 
+	those platforms.
+
+2005-01-25  Murray Cumming  <murrayc@murrayc.com>
+
 	* configure.in, Makefile.am: Add --disable-demos configure option, 
 	by plors in bug #160756. This is needed because AIX does not support 
 	sigc::bind at all and the demos would be quite unreadable if we 
